update navigation fix z-index

--- a/css/app.css
+++ b/css/app.css
@@ -557,7 +557,7 @@
 .Top_bar-fixed {
   position: fixed;
   top: 0;
-  z-index: 900;
+  z-index: 9999;
   width: 100%;
 }
 
