--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -312,7 +312,7 @@
 .Top_bar-fixed {
   position: fixed;
   top: 0;
-  z-index: 900;
+  z-index: 9999;
   width: 100%;
 }
 @media only screen and (max-width: 1025px) {
